--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" routerLink="/shopping-cart">
                             <!-- For some reason, the first word should be changed -->
                             <!-- from "fas" to "fa" -->
-                            
+
                         </a>
                     </li>
 
@@ -77,9 +77,9 @@
                         <i class="fas fa-user"></i>
                     </a>
                     <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="nav-link" routerLink="/login">
+                        <a class="dropdown-item" routerLink="/login">
                             <i class="fas fa-sign-in-alt"></i> Login</a>
-                        <a class="nav-link" routerLink="/signup">
+                        <a class="dropdown-item" routerLink="/signup">
                             <i class="fas fa-user-plus"></i> Signup</a>
                     </div>
                 </li>
