--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -19,6 +19,15 @@
     font-weight: 200px;
 }
 
+.add {
+    background: #FA8072;
+    color: white;
+}
+
+.add:hover {
+    background: rgb(165, 71, 60);
+}
+
 .card-footer {
     margin-top: 10px;
     margin-bottom: -10px;
