--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -48,7 +48,7 @@
             </div>
        <div class="col-sm-1">
        <!-- jun -->
-          <img class="text-center" style="cursor: pointer; margin-top:-50px;" routerLink="/" src="../assets/icons/teamlogo.png" height="100" width="150" routerLink="/">
+          <img class="text-center" style="cursor: pointer; margin-top:-50px;" routerLink="/" src="../assets/icons/teamlogo.png" width="300" height="70" routerLink="/">
        
         </div>
      </div>
