--- a/src/app/shopping/components/check-out/check-out.component.html
+++ b/src/app/shopping/components/check-out/check-out.component.html
@@ -1,5 +1,5 @@
 <br>
-<div style="border-bottom: solid lightgrey; padding-bottom: 15px;">
+<div style="border-bottom: solid lightgrey; padding-bottom: 15px;margin-bottom: 30px;">
     <span class="title-section" style="font-family: Raleway">Check Out</span>
   </div>
 <div class="row" *ngIf="cart$ | async as cart">
