--- a/src/app/shopping/components/products/products.component.html
+++ b/src/app/shopping/components/products/products.component.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway" rel="stylesheet">
 <br>
-<div class="slider" style="box-shadow: 18px -15px #cbc6c6a3; padding-bottom:10px;">
+<div class="slider" style="padding-bottom:10px;">
     <app-slides></app-slides>
 </div>
 
@@ -31,45 +31,21 @@
     </div>
     <!-- Page -->
     <div class="pagination" style="display: inline-block; float: right;">
-    <a (click)="IncOrDecPage(false)">&laquo;</ a>
-    <a *ngFor="let page of pageArr" (click)="setPage(page)" [class.active]="page === currentPage">{{page}}</ a>
-    <a (click)="IncOrDecPage(true)">&raquo;</ a>
-    </div>
+        <a (click)="IncOrDecPage(false)">&laquo;</ a>
+        <a *ngFor="let page of pageArr" (click)="setPage(page)" [class.active]="page === currentPage">{{page}}</ a>
+        <a (click)="IncOrDecPage(true)">&raquo;</ a>
+        </div>
+        
+    <!-- <div class="viewBy" style="display: inline-block; float: right; padding-top: 8px;">
+        <label style="display: inline-block;" for="viewBy">Viewed By </label>
+        <select class="viewByDropdown" style="display: inline-block;" #viewBy="ngModel" ngModel (change)="setItemsPerPage(viewBy.value)" name="ViewBy">
+        <option (change)="setItemsPerPage(12)" value="12">12</option>
+        <option (change)="setItemsPerPage(18)" value="18">18</option>
+        <option (change)="setItemsPerPage(24)" value="24">24</option>
+        </select>
+    </div> -->
     
-    <div class="viewBy" style="display: inline-block; float: right; padding-top: 8px;">
-    <label style="display: inline-block;" for="viewBy">Viewed By </label>
-    <select class="viewByDropdown" style="display: inline-block;" #viewBy="ngModel" ngModel (change)="setItemsPerPage(viewBy.value)" name="ViewBy">
-    <option (change)="setItemsPerPage(12)" value="12">12</option>
-    <option (change)="setItemsPerPage(18)" value="18">18</option>
-    <option (change)="setItemsPerPage(24)" value="24">24</option>
-    </select>
-    </div>
-    
-    </div>
-
-
-
-
-<!-- Button of Sorting -->
-<!-- <button
-  (click)="populateProducts(true)">
-  No Filter
-</button>
-
-<button
-  (click)="populateProductsByPrice(true)">
-  Order By Price (High to Low)
-</button>
-
-<button
-  (click)="populateProductsByPrice(false)">
-  Order By Price (Low to High)
-</button>
-
-<button
-  (click)="populateProductsByRating()">
-  Order By Rating (High to Low)
-</button> -->
+</div>
 
 <div style="margin-top: 50px;" class="row">
     <!-- Take 3 out of 12 columns of the page -->
@@ -89,6 +65,22 @@
                 <!-- redering 3 products per row  -->
                 <div *ngIf="(i + 1) % 3 === 0" class="w-100"></div>
             </ng-container>
+        </div>
+
+
+        <div class="pagination" style="display: inline-block; float: right;">
+            <a href="#top" (click)="IncOrDecPage(false)">&laquo;</ a>
+            <a href="#top" *ngFor="let page of pageArr" (click)="setPage(page)" [class.active]="page === currentPage">{{page}}</ a>
+            <a href="#top" (click)="IncOrDecPage(true)">&raquo;</ a>
+            </div>
+            
+            <div class="viewBy" style="display: inline-block; float: right; padding-top: 8px;">
+            <label style="display: inline-block;" for="viewBy">Viewed By </label>
+            <select class="viewByDropdown" style="display: inline-block;" #viewBy="ngModel" ngModel (change)="setItemsPerPage(viewBy.value)" name="ViewBy">
+            <option (change)="setItemsPerPage(12)" value="12">12</option>
+            <option (change)="setItemsPerPage(18)" value="18">18</option>
+            <option (change)="setItemsPerPage(24)" value="24">24</option>
+            </select>
         </div>
     </div>
 </div>
