--- a/src/app/shopping/components/shipping-form/shipping-form.component.html
+++ b/src/app/shopping/components/shipping-form/shipping-form.component.html
@@ -34,14 +34,14 @@
 <h3 style="color: rgb(7, 131, 247);">Shipping Information</h3>
 <form #f="ngForm">
     <div class="form-group">
-        <label for="">Name</label>
+        <label for="">Name<span style="color:red">*</span></label>
         <input #name="ngModel" name="name" [(ngModel)]="shipping.name" type="text" class="form-control" required>
         <div class="alert alert-danger" *ngIf="name.touched && name.invalid">
             <div *ngIf="name.errors.required">Name is required.</div>
         </div>
     </div>
     <div class="form-group">
-        <label for="">Address</label>
+        <label for="">Address<span style="color:red">*</span></label>
         <input #addressLine1="ngModel" name="addressLine1" [(ngModel)]="shipping.addressLine1" type="text" class="form-control" placeholder="Line 1" required>
         <div class="alert alert-danger" *ngIf="addressLine1.touched && addressLine1.invalid">
             <div *ngIf="addressLine1.errors.required">Address Line 1 is required.</div>
@@ -52,21 +52,21 @@
         <input #addressLine2="ngModel" name="addressLine2" [(ngModel)]="shipping.addressLine2" type="text" class="form-control" placeholder="Line 2">
     </div>
     <div class="form-group">
-        <label for="">City</label>
+        <label for="">City<span style="color:red">*</span></label>
         <input #city="ngModel" name="city" [(ngModel)]="shipping.city" type="text" class="form-control" required>
         <div class="alert alert-danger" *ngIf="city.touched && city.invalid">
             <div *ngIf="city.errors.required">City is required.</div>
         </div>
     </div>
     <div class="form-group">
-        <label for="">State</label>
+        <label for="">State<span style="color:red">*</span></label>
         <input #state="ngModel" name="state" [(ngModel)]="shipping.state" type="text" class="form-control" required>
         <div class="alert alert-danger" *ngIf="state.touched && state.invalid">
             <div *ngIf="state.errors.required">State is required.</div>
         </div>
     </div>
     <div class="form-group">
-        <label for="">Zip Code</label>
+        <label for="">Zip Code<span style="color:red">*</span></label>
         <input #zipcode="ngModel" name="zipcode" [(ngModel)]="shipping.zipcode" type="text" class="form-control" required>
         <div class="alert alert-danger" *ngIf="zipcode.touched && zipcode.invalid">
             <div *ngIf="zipcode.errors.required">Zipcode is required.</div>
