--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,7 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href="https://fonts.googleapis.com/css?family=Black+Han+Sans|Bree+Serif|Jua|Karla|Rubik" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Stardos+Stencil" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
 <div *ngIf="product.title" class="card h-100 d-flex flex-column justify-content-between" style="width: 15rem;">
 
     <!-- Sale tag -->
