--- a/src/app/shopping/components/products/products.component.html
+++ b/src/app/shopping/components/products/products.component.html
@@ -1,6 +1,7 @@
 <link href="https://fonts.googleapis.com/css?family=Quicksand|Raleway" rel="stylesheet">
 <br>
-<div class="slider" style="padding-bottom:10px;">
+
+<div class="slider" style="border-radius: 10px;margin-right: -18%;margin-left: -18%;">
     <app-slides></app-slides>
 </div>
 
