--- a/src/app/shopping/components/shipping-form/shipping-form.component.html
+++ b/src/app/shopping/components/shipping-form/shipping-form.component.html
@@ -8,7 +8,7 @@
     <!-- Coupon Box -->
     <div *ngIf="showCoupon" class="card-body">
         <ul class="list-group list-group-flash">
-            <li class="list-group-item font-weight-bold" style="background-color: rgb(247, 180, 57);">
+            <li class="list-group-item font-weight-bold" style="background-color: #1E90EF;">
                 <input id="coupon" type="text" [(ngModel)]="inputCouponCode" placeholder="Enter Coupon Code">
                 <button id="apply" type="button" (click)="applyCoupon()">Apply</button>
             </li>
