--- a/src/app/bs-navbar/bs-navbar.component.css
+++ b/src/app/bs-navbar/bs-navbar.component.css
@@ -3,7 +3,7 @@
     width: 100%;
     top: 0;
     left: 0;
-    padding: 1rem;
+    padding: 19px;
     text-align: center;
     color: black;
     font-family: sans-serif;
